--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -50,6 +50,13 @@ video {
   max-width: 100%;
 }
 
+button {
+  cursor: pointer;
+  font: inherit;
+  border: none;
+  background: none;
+}
+
 :root {
   --bg-light: 0 0% 90%;
   --bg-dark: 0 0% 0%;
@@ -61,12 +68,12 @@ video {
 
   --shadow-clr: 136 35% 39% / 0.3;
 
-  --step--1: clamp(0.8333rem, 0.7058rem + 0.6377vi, 1.2rem);
-  --step-0: clamp(1rem, 0.8261rem + 0.8696vi, 1.5rem);
-  --step-1: clamp(1.2rem, 0.9652rem + 1.1739vi, 1.875rem);
-  --step-2: clamp(1.44rem, 1.1257rem + 1.5717vi, 2.3438rem);
-  --step-3: clamp(1.728rem, 1.31rem + 2.0899vi, 2.9297rem);
-  --step-4: clamp(2.0736rem, 1.5211rem + 2.7626vi, 3.6621rem);
+  --step--1: clamp(0.8125rem, 0.78rem + 0.2vw, 0.9rem);
+  --step-0: clamp(0.9375rem, 0.9rem + 0.3vw, 1.05rem);
+  --step-1: clamp(1.0625rem, 1rem + 0.4vw, 1.25rem);
+  --step-2: clamp(1.25rem, 1.15rem + 0.6vw, 1.5rem);
+  --step-3: clamp(1.5rem, 1.35rem + 0.9vw, 1.9rem);
+  --step-4: clamp(1.875rem, 1.6rem + 1.2vw, 2.4rem);
 }
 
 .container {
