--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -86,3 +86,15 @@ button {
 .section-margin {
   margin-bottom: 4rem;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
